--- a/src/containers/heroSection/heroSection.css
+++ b/src/containers/heroSection/heroSection.css
@@ -7,6 +7,7 @@
   color: var(--lg-heading);
   --font-family :  'Shadows Into Light', cursive;
 }
+
 .gradient__bg-home {
   /* ff 3.6+ */
         background: -moz-radial-gradient(circle at 3% 25%, rgba(18, 14, 67, 1) 0%, rgba(36, 43, 46, 1) 100%);
@@ -471,7 +472,7 @@ button {
   .heading-fancy-font {
     font-size: 16px;
     text-align: center;
-    padding: 0.7rem;
+    padding-top: 0.7rem;
   }
 
   .btn_wrapper {
